--- a/leaflifespan.Rmd
+++ b/leaflifespan.Rmd
@@ -306,6 +306,8 @@ labels.spp <- c("Banksia ericifolia","Boronia ledifolia","Conospermum ericifoliu
 names(labels.spp) <- c("BAER","BOLE","COER","EPMI","GRBU","GRSP","HATE","HEPU","LEES","PELA","PEPU","PHPH","PILI","PUTU")
 labels.age <- c("1.4","2.4","5","7","9","32")
 names(labels.age) <- c("1.4","2.4","5","7","9","32")
+labels.age2 <- c("2.4","5","7","9","32")
+col.age2 <-c("pink","green","orange","blue","dark green")
 ```
 
 
@@ -330,8 +332,9 @@ mod <- lm(LL_death_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE" &
 summary(mod)  
 
 
-plot(LL_bd_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE" & age>1.5), pch=16, cex=1.2, col=col.age[as.factor(age)])
-legend("bottomright",col=col.age,labels.age,pch=16)
+plot(LL_bd_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE" & age>1.5), pch=16, cex=1.2, col=col.age2[as.factor(age)])
+legend("bottomright",col=col.age2,labels.age2,pch=16)
+
 mod <- lm(LL_bd_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE" & age>1.5))
 summary(mod)  
 
@@ -466,6 +469,8 @@ These models show that for some species, shoot extension decreases enormously in
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
 
+plot(new_length ~ age,SummaryInd,col=col.spp[specie],log="xy")
+
 plot_newlengthvAge <- function(spp) {
   plot(new_length ~ age, data=subset(SummaryInd,species==spp), xlab="age", ylab="leader shoot extention", cex.axis=.8, las=1, pch=16, log="x",
   main=labels.spp[spp])
@@ -562,10 +567,27 @@ for(n in names(labels.spp)) {
   
 #many plots regressing variables against one another
 ```{r, echo=FALSE,results='hide', message=FALSE}
-plot(change_shoot_area~new_length,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="shoot extension (mm)", ylab="increased shoot cross sectional area")
+plot(change_shoot_area~new_length,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="shoot extension (mm)", ylab="increased shoot cross sectional area",main="How well do growth at the shoot level and whole plant level match?")
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+
+plot(change_shoot_area~new_length,SummaryInd, log="xy",col=col.spp[as.factor(species)], pch=16, cex=.8, xlab="shoot extension (mm)", ylab="increased shoot cross sectional area",main="How well do growth at the shoot level and whole plant level match?")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+
+
 mod <- lm(change_shoot_area~new_length +age,data=subset(SummaryInd,change_shoot_area<1000000))
 summary(mod)
+
+plot(change_shoot_area~change_basal_area,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+mod <- lm(change_shoot_area~change_basal_area+age,subset(SummaryInd,age>3))
+summary(mod)
+
+
+plot(change_shoot_area~change_basal_area,SummaryInd, log="xy",col=col.spp[as.factor(species)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+
+
+
 
 plot(lvs_end_total~lvs_start,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="starting leaf count", ylab="ending leaf count")
 
@@ -606,18 +628,18 @@ They show,
 for LMA: slight positive correlation for youngest plants, no correlation for intermediate plants, strong positive correlation for adult plants
 for wood density: no correlation for yougest plants, intermediate plants, but strong negative correlation for adult plants
 ```{r, echo=FALSE,results='hide', message=FALSE}
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
-legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="LMA",ylab="growth investment (mg per year)",main="Seedlings")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.9,col="blue")
 mod<-lm(LMA_mean~GrowthInv_mean+age,data=subset(SummarySppAge,age==1.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
-legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="LMA",ylab="growth investment (mg per year)",main="Saplings")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.9,col="blue")
 mod<-lm(LMA_mean~GrowthInv_mean+age,data=subset(SummarySppAge,age==2.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
-legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=1.2,xlab="LMA",ylab="growth investment (mg per year)",main="Adults")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
 mod<-lm(LMA_mean~GrowthInv_mean+age,data=subset(SummarySppAge,age>3))
 summary(mod)
 
@@ -632,7 +654,7 @@ legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(WD_mean~GrowthInv_mean+age,data=subset(SummarySppAge,age==2.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
+plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=.7)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(WD_mean~GrowthInv_mean+age,data=subset(SummarySppAge,age>3))
 summary(mod)
@@ -649,8 +671,8 @@ legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(seed_size~GrowthInv_mean+age,data=subset(SummarySppAge,age==2.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ seed_size,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
-legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+plot(GrowthInv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age[as.factor(age)],pch=16,cex=1)
+legend("topleft",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(seed_size~GrowthInv_mean+age,data=subset(SummarySppAge,age>3))
 summary(mod)
 
@@ -661,12 +683,12 @@ legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(maxH~GrowthInv_mean,data=subset(SummarySppAge,age==1.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
+plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age==2.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
-mod<-lm(maxH~GrowthInv_mean,data=subset(SummarySppAge,age==2.4))
+mod<-lm(maxH_spp~GrowthInv_mean,data=subset(SummarySppAge,age==2.4))
 summary(mod)
 
-plot(GrowthInv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=.7)
+plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age>3),log="xy",col=col.age[as.factor(age)],pch=16,cex=1.2)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 mod<-lm(maxH~GrowthInv_mean+age,data=subset(SummarySppAge,age>3))
 summary(mod)
