--- a/talk.Rmd
+++ b/talk.Rmd
@@ -11,8 +11,8 @@ output:
 ```{r, echo=FALSE,results='hide', message=FALSE}
 
 # load packages and "open" dataframes to use
-#library(remake)
-#create_bindings()
+library(remake)
+create_bindings()
 ```
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
@@ -206,8 +206,10 @@ SummarySpp <- merge(LL_spp, LMA_spp, by=c("species"))
 SummarySpp <- merge(SummarySpp, wood_summary, by=c("species"))
 SummarySpp <- merge(SummarySpp, seedsize, by=c("species"))
 SummarySpp <- merge(SummarySpp, select(maxH, -age), by=c("species"))
+```
 
 #plotting and stats
+```{r, echo=FALSE,results='hide', message=FALSE}
 #creating lists of information for plotting symbols, colors, labels
 pch.spp <- c(0,1,2,15,16,17,18,0,1,2,15,16,17,18)
 col.spp <- c("red", "dark green", "blue", "purple", "orange", "light green","salmon","turquoise","grey", "black","light blue","brown","yellow","salmon")
@@ -217,6 +219,9 @@ labels.spp <- c("Banksia ericifolia","Boronia ledifolia","Conospermum ericifoliu
 names(labels.spp) <- c("BAER","BOLE","COER","EPMI","GRBU","GRSP","HATE","HEPU","LEES","PELA","PEPU","PHPH","PILI","PUTU")
 labels.age <- c("1.4","2.4","5","7","9","32")
 names(labels.age) <- c("1.4","2.4","5","7","9","32")
+labels.age2 <- c("2.4","5","7","9","32")
+col.age2 <-c("pink","green","orange","blue","dark green")
+col.age3 <-c("green","orange","blue","dark green")
 ```
 
 # file names
@@ -301,6 +306,28 @@ for(n in names(labels.spp)) {
 #  summary(mod_LMAvAge(n))
 }
 ```
+
+#Several species show significant declines in shoot extension with age
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot_newlengthvAge <- function(spp) {
+  plot(new_length ~ age, data=subset(SummaryInd,species==spp), xlab="age", ylab="leader shoot extention", cex.axis=.8, las=1, pch=16, log="x",
+  main=labels.spp[spp])
+  points(new_length_mean ~ age, data=subset(SummarySppAge, species==spp), cex=1.3, pch=8)
+  points((new_length_mean+new_length_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=25)
+  points((new_length_mean-new_length_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=24)
+}
+
+mod_newlengthvAge <- function(spp) {
+  lm(new_length ~ age, data=subset(SummaryInd,age>2.4 & species==spp))
+}
+
+for(n in names(labels.spp)) {
+  plot_newlengthvAge(n)
+  mod_newlengthvAge(n)
+  summary(mod_newlengthvAge(n))
+}
+```
+
 #Had expected a stronger pattern either in leaf lifespan or leaf count on a shoot
 Apparently it is simply that older plants have more stem - plotting total leaf weight against final weight, shows bigger plants have relatively fewer leaves
 (Yes, I know the 2.4 yr olds are missing...)
@@ -309,6 +336,12 @@ Apparently it is simply that older plants have more stem - plotting total leaf w
 plot(total_leaf_weight~FinalWeight,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=0.8)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
 ```
+#Next steps?
+As I begin to analyze RA patterns, think more specifically about the species that do show a distinct change with age in one of hte "leaf" parameters.
+
+For instance, is there some way to capture "change with age" as a variabe of its own that is worth comparing across species.
+
+Afterall, the energy allocation models suggest that different RA schedules may be due to different amounts of "shifting" across species - some species might be predicted to shift more than others.
 
 #LMA vs Leaf lifespan
 This correlation is as expected, except for the babies
@@ -322,5 +355,56 @@ points(LL_birth_mean ~ LMA_mean, col="red", data=subset(SummarySppAge, species==
 legend("bottomright",col=col.LMA, labels.LMA, pch=16, cex=1.4)
 ```
 
-#Some other teasers for the future
+#LMA vs LL without young plants
+The pattern becomes more obvious when young plants (and Hakea) are omitted
 
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(LL_bd_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE" & age>1.5), pch=16, cex=1.2, col=col.age2[as.factor(age)])
+legend("bottomright",col=col.age2,labels.age2,pch=16)
+```
+
+#Growth rates increase with increasing LMA in adult plants
+But there is no relationship in seedlings (age=1.4) or saplings (age=2.4)
+This is not predicted by Daniel's model or Anais' review
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age[as.factor(age)],pch=16,cex=1.2,xlab="LMA",ylab="growth investment (mg per year)",main="Seedlings")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.9,col="blue")
+
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="pink",pch=16,cex=1.2,xlab="LMA",ylab="growth investment (mg per year)",main="Saplings")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.9,col="blue")
+
+plot(GrowthInv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1.2,xlab="LMA",ylab="growth investment (mg per year)",main="Adults")
+text(GrowthInv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+legend("bottomright",col=col.age,labels.age,pch=16)
+```
+
+#Species with greater wood density have higher growth rates
+Again there is no relationship in younger plants
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(GrowthInv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1,xlab="wood density",ylab="growth investment (mg per year)",xlim=c(0.57,0.9),main="Relationship between wood density and growth rates")
+text(GrowthInv_mean ~ WD_mean, data=subset(SummarySppAge,age==5), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+```
+
+#Species with larger seeds have higher growth rates
+The same basic relationship exists across all ages, so combined all data here
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(GrowthInv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age[as.factor(age)],pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
+legend("topleft",col=col.age, labels.age, pch=16, cex=1)
+text(GrowthInv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
+```
+
+#Species with greater maximum height have higher growth rates
+For younger plants there is no relationship with *SPECIES* overall maximum H, but there is a positive correlation with the maximum height the species reaches at a given age -i.e. fast growing young plants are tall when young.
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(GrowthInv_mean ~ maxH_spp,data=subset(SummarySppAge,age>3),log="xy",col=col.age3[as.factor(age)],pch=16,cex=1.2,xlab="maximum height (mm)",ylab="growth investment (mg per year)",xlim=c(500,3200),main="Relationship between growth rates on maximum H")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+text(GrowthInv_mean ~ maxH_spp, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
+```
+
+#Correlations between different growth measures
+Increased cross-sectional area of a leader and the entire plant are fairly correlated and uneffected by age (once not baby)
+```{r, echo=FALSE,results='hide', message=FALSE}
+plot(change_shoot_area~change_basal_area,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
+legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
+```
